<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Task_edit">

    <TextView
        android:id="@+id/edit_taskNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:textSize="22dp"
        android:text="@string/taskName" />

    <EditText
        android:id="@+id/edit_taskName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:layout_marginLeft="10sp"
        android:inputType="text"
        android:hint="task name" />

    <TextView
        android:id="@+id/edit_taskDescriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:textSize="22dp"
        android:text="Description:" />

    <EditText
        android:id="@+id/edit_taskDescription"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginLeft="10sp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="task description"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/edit_taskPriorityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:textSize="22dp"
        android:text="Priority:" />

    <RadioGroup
        android:id="@+id/edit_taskPriorityGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_taskPriority1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />

        <RadioButton
            android:id="@+id/edit_taskPriority2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />

        <RadioButton
            android:id="@+id/edit_taskPriority3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />
    </RadioGroup>

    <TextView
        android:id="@+id/edit_taskDueDateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:layout_marginLeft="10sp"
        android:text="Due Date:" />

    <Button
        android:id="@+id/edit_taskDueDate"
        style="?android:dropDownSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openDatePicker"
        android:text="@string/due_date"
        android:layout_marginLeft="10sp"
        android:textColor="@color/white"
        app:icon="@drawable/calendar" />
    

    <TextView
        android:id="@+id/edit_taskTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10sp"
        android:textSize="22dp"
        android:text="Due Time:" />

    <Button
        android:id="@+id/edit_taskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        app:icon="@drawable/time"
        android:text="pick a time"/>
    <TextView
        android:id="@+id/edit_taskReminderDateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10dp"
        android:textSize="22dp"
        android:contentDescription="@string/reminder_date_desc"
        android:text="Reminder:" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/edit_taskReminderDate"
            style="?android:dropDownSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openReminderDatePicker"
            android:text="@string/reminder_date"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="10sp"
            android:textColor="@color/white"
            app:icon="@drawable/calendar" />

        <Button
            android:id="@+id/edit_taskReminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/time"
            android:text="Reminder Time"/>
    </LinearLayout>
    

    <TextView
        android:id="@+id/edit_taskStatusLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10sp"
        android:textSize="22dp"
        android:text="Status:" />

    <RadioGroup
        android:id="@+id/edit_taskStatusGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_taskStatusTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="20dp"
            android:text="@string/completed" />

        <RadioButton
            android:id="@+id/edit_taskStatusFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="uncompleted" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:textColor="@color/red"
            android:layout_weight="1"
            app:strokeColor="@color/red"
            app:strokeWidth="2dp"
            android:text="cancel" />
        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/green"
            app:strokeColor="@color/green"
            app:strokeWidth="3dp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="10sp"
            android:text="Finish" />

    </LinearLayout>



</LinearLayout>